Fix SetPriceDialog layout issues

--- a/app/src/marketplace/components/Steps/steps.pcss
+++ b/app/src/marketplace/components/Steps/steps.pcss
@@ -1,3 +1,7 @@
+.container {
+  width: 100%;
+}
+
 .errors {
   float: left;
   padding: 20px 0;
